<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/login" android:text="@string/login" android:textSize="30sp" android:textColor="#03F"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/usuario" android:text="@string/usuario"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/user" android:text="emp@andromessenger" android:layout_width="fill_parent"></EditText>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/apodo" android:text="@string/apodo"></TextView>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/apodoEntrada" android:text="emp"></EditText>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/contrasena" android:text="@string/contrasena"></TextView>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/pass" android:text="pass" android:password="true"></EditText>    

<Button 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:id="@+id/botonEnviar" android:text="@string/enviar"></Button>
</LinearLayout>